tests/ui/from_source.stderr
error: Only one `source` field allowed per struct or struct variant (remember that `#[from]` implies `source`)
  --> $DIR/from_source.rs:10:5
   |
10 |     cause: io::Error,
   |     ^^^^^

error: Only one `#[from]` field allowed per struct or struct variant
  --> $DIR/from_source.rs:20:5
   |
20 |     cause: io::Error,
   |     ^^^^^

error: Only one `source` field allowed per struct or struct variant (remember that `#[from]` implies `source`)
  --> $DIR/from_source.rs:29:5
   |
29 |     cause: io::Error,
   |     ^^^^^
